--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,10 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MagnetYoke_HMI"
+        xmlns:FM_View ="clr-namespace:FM2002.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="62,54,0,0" VerticalAlignment="Top" Height="39" Width="71" Click="button_Click"/>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="13*"/>
+        </Grid.ColumnDefinitions>
+        
+        <Button Grid.Column="0" x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="16,21,0,0" VerticalAlignment="Top" Height="39" Width="71" Click="button_Click"/>
+        <Grid Grid.Column="1">
+            <FM_View:FM2002_View/>
+        </Grid>
     </Grid>
 </Window>
